--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -1,41 +1,536 @@
-//@import url('https://fonts.googleapis.com/css?family=Roboto+Serif:600.css');
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,500');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700');
 
 @import 'colors.less';
+@import 'site_overrides.less';
 
-#app-root-2024-palestine_rapid_assessment .app {
+.app-root-2024-palestine_rapid_assessment .app {
+  
   font-family: Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
-  .map_container {
+  h2,
+  h3,
+  h4,
+  ul,
+  ol,
+  h4,
+  .chart_container,
+  p {
+    box-sizing: border-box;
+    margin: auto auto 20px auto;
+    @media all and (max-width: 670px) {
+      box-sizing: border-box;
+      padding: 0 10px;
+    }
+  }
+  .cover_container {
+    background-color: @unblue;
+    box-sizing: border-box;
+    padding: 100px 0 20px 0;
     position: relative;
-    .background_map {
-      background-image: url('./assets/img/expenditure-losses_0.png');
-      background-position: 50% 50%;
-      background-repeat: no-repeat;
-      background-size: contain;
-      height: 100vh;
-      width: 100vw;
-      &.fixed {
-        position: fixed;
-      }
-      &.absolute {
-        position: absolute;
+    text-align: center;
+    .cover_bottom {
+      width: 100%;
+      .flex {
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        width: 100%;
+        @import 'arrow.less';
+        .unctad_logo_container {
+          img {
+            padding-bottom: 30px;
+            width: 100px;
+          }
+        }
       }
     }
-    .date_container {
-      align-items: center;
-      display: flex;
-      height: 100vh;
-      justify-content: center;
-      position: relative;
-      z-index: 2;
-      .date {
-        background-color: rgba(255, 255, 255, 0.8);
-        border-radius: 10px;
-        border: 2px solid #aea29a;
-        min-width: 200px;
-        padding: 20px 30px;
+    .content_container {
+      margin: auto auto;
+      max-width: 700px;
+      h2 {
+        &.title {
+          background-color: #fff;
+          color: @unbluetext;
+          margin: 10px auto 10px auto;
+        }
+      }
+      h3 {
+        text-transform: uppercase;
+        margin: auto auto 5px auto;
+        &.upper {
+          font-size: 48px;
+          line-height: 48px;
+        }
+        &.lower {
+          font-size: 38px;
+          line-height: 38px;
+          margin-bottom: 60px;
+        }
+      }
+      h4 {
+        text-transform: uppercase;
+        color: #000;
+        font-weight: 300;
+        font-size: 36px;
+        margin: 0 0 10px 0;
+        &.date {
+          background-color: #fff;
+          color: #000;
+          display: inline-block;
+          font-family: Roboto;
+          font-size: 20px;
+          font-weight: 400;
+          padding: 2px 10px;
+          text-transform: none;
+        }
+      }
+      p {
+        color: #fff;
+        font-size: 14px;
+        margin: 20px auto 20px auto;
+        font-weight: 400;
+        line-height: 18px;
+      }
+    }
+    img {
+      max-width: 1000px;
+      width: 100%;
+    }
+  }
+  .button_container {
+    margin: 20px auto 40px auto;
+    text-align: center;
+    a {
+      &.button {
+        background-color: #fff;
+        border-radius: 15px;
+        color: #222;
+        font-size: 18px;
+        padding: 5px 15px;
+        text-decoration: none;
+        text-transform: uppercase;
+        &:hover {
+          background-color: @unblue;
+          color: #fff;
+          text-decoration: none;
+        }
+      }
+      &.button_blue {
+        background-color: @unblue;
+        border-radius: 15px;
+        border: 1px solid transparent;
+        color: #fff;
+        font-size: 18px;
+        padding: 5px 15px;
+        text-decoration: none;
+        text-transform: uppercase;
+        &:hover {
+          background-color: #fff;
+          border: 1px solid @unblue;
+          color: @unblue;
+          text-decoration: none;
+        }
       }
     }
   }
-}
 
-@import 'basics.less';
+  .content_container {
+    box-sizing: border-box;
+    margin: auto auto 40px auto;
+    max-width: 650px;
+    h2 {
+      display: inline-block;
+      font-family: "Roboto Condensed";
+      font-size: 60px;
+      font-weight: 700;
+      line-height: 70px;
+      margin: 10px auto 20px auto;
+      padding: 0px 10px;
+      text-transform: uppercase;
+    }
+    h3 {
+      color: #000;
+      font-family: "Roboto Condensed";
+      font-size: 40px;
+      font-weight: 400;
+      line-height: 40px;
+      margin: 0 0 20px 0;
+      &.highlight {
+        color: #fff;
+      }
+    }
+    h4 {
+      color: @unbluetext;
+      font-family: "Roboto Condensed";
+      font-size: 32px;
+      font-weight: 600;
+      margin: 60px auto 20px auto;
+      &.unctad {
+        color: #fff;
+        text-transform: uppercase;
+      }
+      &.title {
+        font-size: 26px;
+        margin: 0 0 20px 0;
+        text-align: left;
+        font-weight: 700;
+        text-transform: uppercase;
+      }
+      &.meta {
+        margin-bottom: 0;
+        padding: 0;
+        font-size: 28px;
+        color: #000;
+      }
+    }
+    ul,
+    ol,
+    p {
+      font-size: 18px;
+      font-weight: 300;
+      line-height: 26px;
+      text-align: left;
+      &.highlight {
+        color: @unbluetext;
+        font-style: italic;
+        font-weight: 600;
+        max-width: 550px;
+      }
+      a {
+        color: @unbluetext;
+        text-decoration: none;
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+    }
+    ul {
+      color: @unbluetext;
+      list-style-type:  disc;
+      li {
+        color: @unbluetext;
+        margin-bottom: 10px;
+        margin-left: 28px;
+        .highlight {
+          font-weight: bold;
+        }
+        .not_highlight {
+          color: #222;
+        }          
+      }
+    }
+    ol {
+      color: #222;
+      margin-top: 10px;
+      li {
+        color: #222;
+        margin-bottom: 10px;
+        margin-left: 28px;
+        .highlight {
+          font-weight: bold;
+        }
+        .not_highlight {
+          color: #000;
+        }          
+      }
+    }
+    .quote_container {
+      background-color: @unblue;
+      margin: 40px auto auto auto;
+      .photo_container {
+        font-size: 0;
+        margin-bottom: 20px;
+        padding: 20px;
+        img {
+          margin-bottom: 5px;
+          padding: 0;
+          width: 100%;
+        }
+        .caption {
+          color: #333;
+          font-size: 12px;
+          text-transform: uppercase;
+        }
+      }
+      .text_container {
+        padding: 20px 10px 1px 10px;
+        position: relative;
+        &:before {
+          color: #222;
+          content: "”";
+          font-family: "Georgia", serif;
+          font-size: 120px;
+          font-weight: 700;
+          line-height: 20px;
+          position: absolute;
+          right: 20px;
+          text-align: right;
+          top: 0px;
+        }
+        p {
+          color: #fff;
+          margin: 0 0 20px 0;
+        }
+        .author {
+          color: #222;
+          font-weight: 700;
+          margin: 0 0 5px 0;
+        }
+      }
+    }
+    .un_link_container {
+      margin-top: 100px;
+      .un_link {
+        background-color: rgba(255, 255, 255, 0.85);
+        border-radius: 30px;
+        color: #222;
+        font-size: 30px;
+        font-weight: 200;
+        padding: 2px 15px;
+        text-decoration: none;
+        text-transform: uppercase;
+        &:hover {
+          background-color: #fff;
+        }
+      }
+    }
+  }
+  .section_banner_container {
+    margin-bottom: 40px;
+    .section_banner {
+      background-position: 50% 50%;
+      background-repeat: no-repeat;
+      background-size: cover;
+      height: 500px;
+      position: relative;
+      .number {
+        bottom: 0;
+        color: rgba(0, 158, 219, 0.8);
+        font-size: 710px;
+        font-weight: 700;
+        line-height: 525px;
+        overflow: hidden;
+        position: absolute;
+        top: 0;
+        @media all and (max-width: 800px) {
+          display: none;
+        }
+      }
+    }
+    &.section_banner_container_1 .section_banner {
+      background-image: url('./../assets/img/2024-palestine_rapid_assessment_section1-min.jpg');
+      background-position: 0% 90%
+    }
+    &.section_banner_container_2 .section_banner {
+      background-image: url('./../assets/img/2024-palestine_rapid_assessment_section2-min.jpg');
+      background-position: 50% 40%
+    }
+    &.section_banner_container_3 .section_banner {
+      background-image: url('./../assets/img/2024-palestine_rapid_assessment_section3-min.jpg');
+      background-position: 50% 40%
+    }
+    .heading_wrapper {
+      background-color: @unblue;
+      h3 {
+        box-sizing: border-box;
+        color: #fff;
+        font-family: "Roboto Condensed";
+        font-size: 60px;
+        line-height: 70px;
+        margin: auto auto;
+        max-width: 1100px;
+        padding: 10px 10px 10px 10px;
+        @media all and (max-width: 550px) {
+          padding: 10px 10px 10px 10px;
+        }
+      }
+    }
+  }
+  .img_container {
+    max-width: 900px;
+    margin: auto auto 40px auto;
+    img {
+      width: 100%;
+    }
+  }
+  .chart_container {
+    background-color: #fff;
+    box-sizing: border-box;
+    margin: auto auto 40px auto;
+    max-width: 600px;
+    overflow: hidden;
+    img {
+      width: 100%;
+    }
+    h4 {
+      color: rgb(0, 0, 0);
+      font-family: Roboto Condensed;
+      font-size: 26px;
+      font-weight: 600;
+      margin-bottom: 20px;
+      margin: 0 0 10px 0;
+      padding: 0;
+      text-decoration: none;
+    }
+    h5 {
+      color: rgb(88, 89, 91);
+      font-size: 18px;
+      font-style: normal;
+      font-weight: normal;
+      line-height: 21px;
+      margin: 7px 0px 20px 0;
+      text-decoration: none;
+    }
+    h6 {
+      color: rgb(88, 89, 91);
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 300;
+      margin: 0 0 2px 0;
+      text-decoration: none;
+      em {
+        font-weight: 300;
+        font-style: italic;
+      }
+    }
+  }
+
+  .scroller {
+    .map_container {
+      box-sizing: border-box;
+      position: relative;
+      max-width: 600px;
+      .background_map {
+        height: 100vh;
+        margin: auto auto;
+        max-width: 600px;
+        overflow: hidden;
+        &.fixed {
+          position: fixed;
+          .content_container {
+            @media all and (max-width: 670px) {
+              img {
+                width: calc(100% - 20px);
+              }
+            }
+          }
+        }
+        &.absolute {
+          position: absolute;
+        }
+        .content_container {
+          display: flex;
+          flex-direction: column;
+          height: 100%;
+          justify-content: center;
+          @media all and (max-width: 670px) {
+            width: calc(100% - 20px);
+          }
+          img {
+            width: 100%;
+            margin-bottom: 10px;
+          }
+        }
+      }
+      .date_container {
+        align-items: center;
+        display: flex;
+        height: 150vh;
+        justify-content: center;
+        position: relative;
+        z-index: 2;
+        .date {
+          background-color: rgba(0, 0, 0, 0.85);
+          border-radius: 5px;
+          color: #fff;
+          font-family: Roboto Condensed;
+          font-size: 24px;
+          line-height: 30px;
+          max-width: 300px;
+          min-width: 200px;
+          padding: 20px 30px;
+          text-align: center;
+        }
+      }
+    }
+  }
+  .damage_map,
+  .ntl_map {
+    font-size: 0;
+    max-width: 700px;
+    margin: auto auto 40px auto;
+    text-align: center;
+    position: relative;
+    &::after {
+      background-image: url('./../assets/img/gaza.png');
+      background-position: 50% 50%;
+      background-repeat: no-repeat;
+      background-size: 100% 100%;
+      content: '';
+      height: 100%;
+      left: 0;
+      opacity: 0.3;
+      position: absolute;
+      top: 0;
+      width: 100%;
+      z-index: 2;
+    }
+    .square {
+      border-collapse: collapse;
+      box-sizing: border-box;
+      display: inline-block;
+      font-size: 10px;
+      margin-left: 1px;
+      margin-top: 1px;
+      outline: 1px solid rgba(0, 0, 0, 0.0);
+      padding-bottom: calc((100% / 32) - 2px);
+      width: calc((100% / 32) - 2px);
+    }
+  }
+  .charts_container {
+    margin: 40px auto;
+    max-width: 700px;
+    padding-bottom: 20px;
+    .chart_selection_container {
+      margin-bottom: 20px;
+      .info_text {
+        p {
+          color: #777;
+          font-size: 14px;
+          margin: 0 0 5px 0;
+          text-transform: uppercase;
+        }
+      }
+      .button_container {
+        display: inline-block;
+        margin: 0 10px 0 0;
+        button {
+          background-color: @ungrey;
+          border: 1px solid #ccc;
+          box-shadow: 2px 2px 10px #ccc;
+          color: #fff;
+          cursor: pointer;
+          padding: 10px 20px;
+          &:hover {
+            background-color: @unblue;
+          }
+          &.active {
+            background-color: @unblue;
+            cursor: default;
+          }
+        }
+      }
+    }
+    .chart_wrapper {
+      margin: 20px auto;
+      min-height: 857px;
+      .chart_container {
+        margin: auto auto;
+        min-height: 857px;
+        width: 100%;
+      }
+    }
+  }
+  @import 'basics.less';
+}
