--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -22,6 +22,9 @@
       padding: 0 10px;
     }
   }
+  h3.text_center {
+    text-align: center;
+  }
   .cover_container {
     background-color: @unblue;
     box-sizing: border-box;
@@ -463,7 +466,7 @@
     text-align: center;
     position: relative;
     &::after {
-      background-image: url('./../assets/img/gaza.png');
+      background-image: url('./../assets/img/2024-palestine_rapid_assessment_gaza_boundaries.png');
       background-position: 50% 50%;
       background-repeat: no-repeat;
       background-size: 100% 100%;
