--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -372,17 +372,17 @@
       font-size: 26px;
       font-weight: 600;
       margin-bottom: 20px;
-      margin: 0 0 10px 0;
+      margin: 0 0 7px 0;
       padding: 0;
       text-decoration: none;
     }
     h5 {
       color: rgb(88, 89, 91);
-      font-size: 18px;
+      font-size: 16px;
       font-style: normal;
       font-weight: normal;
-      line-height: 21px;
-      margin: 7px 0px 20px 0;
+      line-height: 20px;
+      margin: 0 0 20px 0;
       text-decoration: none;
     }
     h6 {
@@ -427,33 +427,48 @@
           flex-direction: column;
           height: 100%;
           justify-content: center;
+          margin: auto auto;
           @media all and (max-width: 670px) {
             width: calc(100% - 20px);
           }
           img {
+            margin: 0 auto 10px auto;
+            max-width: 450px;
             width: 100%;
-            margin-bottom: 10px;
           }
         }
       }
-      .date_container {
+      .meta_container {
         align-items: center;
         display: flex;
         height: 150vh;
         justify-content: center;
         position: relative;
         z-index: 2;
-        .date {
+        .caption {
           background-color: rgba(0, 0, 0, 0.85);
           border-radius: 5px;
           color: #fff;
           font-family: Roboto Condensed;
-          font-size: 24px;
-          line-height: 30px;
           max-width: 300px;
           min-width: 200px;
           padding: 20px 30px;
           text-align: center;
+          .text {
+            font-size: 24px;
+            line-height: 30px;
+            margin-bottom: 15px;
+          }
+          .date_title {
+            text-transform: uppercase;
+            font-size: 18px;
+            color: #ddd;
+            margin-bottom: 5px;
+          }
+          .date {
+            font-size: 16px;
+            color: #ddd;
+          }
         }
       }
     }
