--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -19,7 +19,6 @@
     margin: auto auto 20px auto;
     @media all and (max-width: 670px) {
       box-sizing: border-box;
-      padding: 0 10px;
     }
   }
   h3.text_center {
@@ -31,6 +30,74 @@
     padding: 100px 0 20px 0;
     position: relative;
     text-align: center;
+    .content_container {
+      margin: auto auto;
+      max-width: 700px;
+      @media all and (max-width: 550px) {
+        h2 {
+          font-size: 46px;
+          line-height: 50px;
+          padding: 20px 10px;
+        }
+      }
+      h2 {
+        &.title {
+          background-color: #fff;
+          color: @unbluetext;
+          margin: 10px auto 10px auto;
+        }
+      }
+      h3 {
+        margin: auto auto 5px auto;
+        text-transform: uppercase;
+        &.upper {
+          font-size: 48px;
+          line-height: 48px;
+          @media all and (max-width: 550px) {
+            font-size: 40px;
+            line-height: 44px;
+          }
+        }
+        &.lower {
+          font-size: 38px;
+          line-height: 38px;
+          margin-bottom: 60px;
+          @media all and (max-width: 550px) {
+            font-size: 30px;
+            line-height: 32px;
+          }
+        }
+      }
+      h4 {
+        color: #000;
+        font-size: 36px;
+        font-weight: 300;
+        margin: 0 0 10px 0;
+        text-transform: uppercase;
+        &.date {
+          background-color: #fff;
+          color: #000;
+          display: inline-block;
+          font-family: Roboto;
+          font-size: 20px;
+          font-weight: 400;
+          margin-bottom: 20px;
+          padding: 2px 10px;
+          text-transform: none;
+        }
+      }
+      p {
+        color: #fff;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 18px;
+        margin: 20px auto 20px auto;
+      }
+    }
+    img {
+      max-width: 1000px;
+      width: 100%;
+    }
     .cover_bottom {
       width: 100%;
       .flex {
@@ -47,58 +114,6 @@
           }
         }
       }
-    }
-    .content_container {
-      margin: auto auto;
-      max-width: 700px;
-      h2 {
-        &.title {
-          background-color: #fff;
-          color: @unbluetext;
-          margin: 10px auto 10px auto;
-        }
-      }
-      h3 {
-        text-transform: uppercase;
-        margin: auto auto 5px auto;
-        &.upper {
-          font-size: 48px;
-          line-height: 48px;
-        }
-        &.lower {
-          font-size: 38px;
-          line-height: 38px;
-          margin-bottom: 60px;
-        }
-      }
-      h4 {
-        text-transform: uppercase;
-        color: #000;
-        font-weight: 300;
-        font-size: 36px;
-        margin: 0 0 10px 0;
-        &.date {
-          background-color: #fff;
-          color: #000;
-          display: inline-block;
-          font-family: Roboto;
-          font-size: 20px;
-          font-weight: 400;
-          padding: 2px 10px;
-          text-transform: none;
-        }
-      }
-      p {
-        color: #fff;
-        font-size: 14px;
-        margin: 20px auto 20px auto;
-        font-weight: 400;
-        line-height: 18px;
-      }
-    }
-    img {
-      max-width: 1000px;
-      width: 100%;
     }
   }
   .button_container {
@@ -137,14 +152,17 @@
       }
     }
   }
-
   .content_container {
+    position: relative;
     box-sizing: border-box;
     margin: auto auto 40px auto;
     max-width: 650px;
+    @media all and (max-width: 670px) {
+      padding: 0 10px;
+    }
     h2 {
       display: inline-block;
-      font-family: "Roboto Condensed";
+      font-family: Roboto Condensed;
       font-size: 60px;
       font-weight: 700;
       line-height: 70px;
@@ -154,7 +172,7 @@
     }
     h3 {
       color: #000;
-      font-family: "Roboto Condensed";
+      font-family: Roboto Condensed;
       font-size: 40px;
       font-weight: 400;
       line-height: 40px;
@@ -165,7 +183,7 @@
     }
     h4 {
       color: @unbluetext;
-      font-family: "Roboto Condensed";
+      font-family: Roboto Condensed;
       font-size: 32px;
       font-weight: 600;
       margin: 60px auto 20px auto;
@@ -175,16 +193,16 @@
       }
       &.title {
         font-size: 26px;
+        font-weight: 700;
         margin: 0 0 20px 0;
         text-align: left;
-        font-weight: 700;
         text-transform: uppercase;
       }
       &.meta {
+        color: #000;
+        font-size: 28px;
         margin-bottom: 0;
         padding: 0;
-        font-size: 28px;
-        color: #000;
       }
     }
     ul,
@@ -196,6 +214,7 @@
       text-align: left;
       &.highlight {
         color: @unbluetext;
+        font-size: 20px;
         font-style: italic;
         font-weight: 600;
         max-width: 550px;
@@ -262,7 +281,7 @@
         &:before {
           color: #222;
           content: "”";
-          font-family: "Georgia", serif;
+          font-family: Georgia-, serif;
           font-size: 120px;
           font-weight: 700;
           line-height: 20px;
@@ -316,7 +335,7 @@
         overflow: hidden;
         position: absolute;
         top: 0;
-        @media all and (max-width: 800px) {
+        @media all and (max-width: 900px) {
           display: none;
         }
       }
@@ -338,13 +357,19 @@
       h3 {
         box-sizing: border-box;
         color: #fff;
-        font-family: "Roboto Condensed";
+        font-family: Roboto Condensed;
         font-size: 60px;
         line-height: 70px;
         margin: auto auto;
         max-width: 1100px;
         padding: 10px 10px 10px 10px;
+        @media all and (max-width: 900px) {
+          font-size: 50px;
+          line-height: 60px;
+        }
         @media all and (max-width: 550px) {
+          font-size: 40px;
+          line-height: 50px;
           padding: 10px 10px 10px 10px;
         }
       }
@@ -363,6 +388,9 @@
     margin: auto auto 40px auto;
     max-width: 600px;
     overflow: hidden;
+    .chart {
+      padding: 0 10px;
+    }
     img {
       width: 100%;
     }
@@ -402,20 +430,21 @@
   .scroller {
     .map_container {
       box-sizing: border-box;
-      position: relative;
       max-width: 600px;
+      position: relative;
       .background_map {
         height: 100vh;
-        margin: auto auto;
         max-width: 600px;
+        min-height: 100vh;
         overflow: hidden;
+        width: 100%;
         &.fixed {
           position: fixed;
           .content_container {
-            @media all and (max-width: 670px) {
-              img {
-                width: calc(100% - 20px);
-              }
+          }
+          .image_container {
+            img {
+              max-width: 500px;
             }
           }
         }
@@ -427,15 +456,9 @@
           flex-direction: column;
           height: 100%;
           justify-content: center;
-          margin: auto auto;
-          @media all and (max-width: 670px) {
-            width: calc(100% - 20px);
-          }
           .image_container {
             margin: 0 auto;
             position: relative;
-            text-align: center;
-            width: 100%;
             .legend_container {
               font-size: 12px;
               font-weight: 300;
@@ -447,9 +470,9 @@
                 height: 15px;
                 line-height: 15px;
                 &.legend_text {
-                  vertical-align: 3px;
                   display: inline-block;
-                  margin: 0 2px;
+                  margin: 0 4px;
+                  vertical-align: 3px;
                 }
                 &.legend_item {
                   display: inline-block;
@@ -458,11 +481,10 @@
               }
             }
             img {
-              margin: 0 auto 10px auto;
-              max-width: 450px;
+              margin: 0 0 10px 0;
+              max-width: 500px;
               width: 100%;
             }
-
           }
         }
       }
@@ -472,12 +494,12 @@
         height: 150vh;
         justify-content: center;
         position: relative;
-        z-index: 2;
         .caption {
-          background-color: rgba(0, 0, 0, 0.85);
+          background-color: rgba(0, 0, 0, 0.80);
           border-radius: 5px;
           color: #fff;
           font-family: Roboto Condensed;
+          margin: 0 10px;
           max-width: 300px;
           min-width: 200px;
           padding: 20px 30px;
@@ -488,14 +510,14 @@
             margin-bottom: 15px;
           }
           .date_title {
-            text-transform: uppercase;
-            font-size: 18px;
             color: #ddd;
+            font-size: 18px;
             margin-bottom: 5px;
+            text-transform: uppercase;
           }
           .date {
-            font-size: 16px;
             color: #ddd;
+            font-size: 16px;
           }
         }
       }
@@ -504,10 +526,10 @@
   .damage_map,
   .ntl_map {
     font-size: 0;
-    max-width: 700px;
     margin: auto auto 40px auto;
-    text-align: center;
+    max-width: 700px;
     position: relative;
+    text-align: center;
     &::after {
       background-image: url('./../assets/img/2024-palestine_rapid_assessment_gaza_boundaries.png');
       background-position: 50% 50%;
@@ -537,27 +559,28 @@
   .charts_container {
     margin: 40px auto;
     max-width: 700px;
-    padding-bottom: 20px;
     .chart_selection_container {
       margin-bottom: 20px;
       .info_text {
         p {
           color: #777;
-          font-size: 14px;
+          font-size: 13px;
           margin: 0 0 5px 0;
+          padding: 0;
           text-transform: uppercase;
         }
       }
       .button_container {
         display: inline-block;
-        margin: 0 10px 0 0;
+        margin: 0 5px 5px 0;
         button {
           background-color: @ungrey;
           border: 1px solid #ccc;
           box-shadow: 2px 2px 10px #ccc;
           color: #fff;
+          font-size: 13px;
           cursor: pointer;
-          padding: 10px 20px;
+          padding: 7px 10px;
           &:hover {
             background-color: @unblue;
           }
@@ -569,14 +592,223 @@
       }
     }
     .chart_wrapper {
-      margin: 20px auto;
-      min-height: 857px;
       .chart_container {
         margin: auto auto;
-        min-height: 857px;
         width: 100%;
       }
     }
   }
   @import 'basics.less';
+}
+
+#app-root-2024-palestine_rapid_assessment_footer {
+  .footer_container {
+    background-color: #000;
+    padding: 30px 0 0 0;
+    h2 {
+      color: #fff;
+      font-family: "Roboto Condensed", "Helvetica Neue", Helvetica, Arial, sans-serif;
+      font-size: 60px;
+      font-weight: 700;
+      letter-spacing: 0.02em;
+      line-height: 60px;
+      margin: auto auto 40px auto;
+      &:after {
+        display: none;
+      }
+      @media all and (max-width: 991px) {
+        max-width: 600px;
+      }
+      @media all and (min-width: 992px) {
+        max-width: 1000px;
+      }
+      text-align: center;
+      text-transform: uppercase;
+    }
+    .download_button {
+      margin-bottom: 50px;
+      text-align: center;
+      a {
+        background-color: #fff;
+        border-radius: 15px;
+        color: #000;
+        font-size: 20px;
+        font-weight: 700;
+        padding: 7px 30px;
+        text-decoration: none;
+        text-transform: uppercase;
+        &:hover {
+          opacity: 0.7;
+        }
+      }
+    }
+    .footer_elements {
+      align-items: flex-start;
+      display: flex;
+      justify-content: center;
+      margin: auto auto;
+      max-width: 1000px;
+      @media all and (max-width: 849px) {
+        align-items: center;
+        flex-direction: column;
+      }
+      @media all and (min-width: 850px) {
+        flex-direction: row;
+      }
+      .footer_element {
+        @media all and (max-width: 640px) {
+          margin: auto 20px auto 20px;
+          max-width: 500px;
+          width: 100%;
+        }
+        @media all and (max-width: 849px) and (min-width: 640px) {
+          margin: auto auto auto auto;
+          width: 600px;
+        }
+        @media all and (min-width: 850px) {
+          margin: 10px;
+          &.footer_element_1 {
+            width: calc(100%);
+          }
+        }
+        .footer_content {
+          background-color: #fff;
+          border-radius: 5px;
+          box-sizing: border-box;
+          color: #000;
+          margin-bottom: 20px;
+          padding: 20px;
+          width: 100%;
+          p {
+            color: #000;
+            font-size: 20px;
+            line-height: 26px;
+            margin: 0 0 5px 0;
+          }
+          img {
+            margin-top: 10px;
+            width: 100%;
+            max-width: 200px;
+          }
+          a {
+            color: #fff;
+          }
+          .iframe_container {
+            font-size: 18px;
+            line-height: 22px;
+            margin: 0 0 10px 0;
+            a {
+              color: @unbluetext;
+              text-decoration: underline;
+              &:hover {
+                text-decoration: none;
+              }
+            }
+            &.youtube_iframe {
+              padding-bottom: 56.25%;
+              position: relative;
+              width: 100%;
+              iframe {
+                border: 0;
+                height: 100%;
+                left: 0;
+                position: absolute;
+                top: 0;
+                width: 100%;
+              }
+            }
+            iframe {
+              border: 0;
+            }
+          }
+          h3 {
+            font-family: "Roboto Condensed", "Helvetica Neue", Helvetica, Arial, sans-serif;
+            font-size: 30px;
+            font-weight: 700;
+            letter-spacing: 0.02em;
+            line-height: 36px;
+            margin: 0 0 20px 0;
+            text-transform: uppercase;
+            a {
+              color: @unbluetext;
+              text-decoration: underline;
+              &:hover {
+                text-decoration: none;
+              }
+            }
+          }
+          h4 {
+            font-size: 20px;
+            font-weight: 700;
+            line-height: 22px;
+            margin: 40px 0 5px 0;
+            text-transform: uppercase;
+          }
+          ul {
+            list-style-type: none;
+            margin: 10px 0 20px 0;
+            padding: 0 0 0 0;
+            a {
+              color: @unbluetext;
+              text-decoration: underline;
+              &:hover {
+                text-decoration: none;
+              }
+            }
+            li {
+              font-size: 18px;
+              line-height: 22px;
+              margin: 0 0 10px 0;
+              ul {
+                list-style-type: disc;
+                margin: 0 0 20px 5px;
+                padding: 0 0 0 20px;
+                li {
+                  font-size: 15px;
+                  margin-bottom: 0;
+                }
+              }
+            }
+            &.podcasts_container,
+            &.videos_container {
+              list-style-type: none;
+              padding: 0;
+              li {
+                align-items: center;
+                display: flex;
+                width: 100%;
+                .icon {
+                  background-position: 50% 50%;
+                  background-repeat: no-repeat;
+                  content: '';
+                  display: inline-block;
+                  height: 40px;
+                  margin-right: 10px;
+                  max-width: 40px;
+                  position: relative;
+                  width: 40px;
+                }
+                .text {
+                  width: 100%;
+                }
+              }
+            }
+            &.podcasts_container {
+              margin-bottom: 40px;
+              li .icon {
+                background-image: url(https://storage.unctad.org/2023-tdr_report/assets/img/icons/2023-tdr_report_podcast.png);
+                background-size: auto 40px;
+              }
+            }
+            &.videos_container {
+              li .icon {
+                background-image: url(https://storage.unctad.org/2023-tdr_report/assets/img/icons/2023-tdr_report_video.png);
+                background-size: auto 25px;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
 }
