--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -46,6 +46,9 @@
           color: @unbluetext;
           margin: 10px auto 10px auto;
         }
+        &:after {
+          display: none;
+        }
       }
       h3 {
         margin: auto auto 5px auto;
@@ -531,14 +534,14 @@
     position: relative;
     text-align: center;
     &::after {
-      background-image: url('./../assets/img/2024-palestine_rapid_assessment_gaza_boundaries.png');
+      background-image: url('./../assets/img/2024-palestine_rapid_assessment_gaza_boundaries_thicker.png');
       background-position: 50% 50%;
       background-repeat: no-repeat;
       background-size: 100% 100%;
       content: '';
       height: 100%;
       left: 0;
-      opacity: 0.3;
+      opacity: 1;
       position: absolute;
       top: 0;
       width: 100%;
