--- a/src/styles/arrow.less
+++ b/src/styles/arrow.less
@@ -1,5 +1,6 @@
 .arrows {
   height: 80px;
+  margin-bottom: 20px;
   width: 60px;
   z-index: 2;
 }
@@ -19,14 +20,14 @@
 }
 
 .arrows path.a1 {
-  animation-delay:-1s;
+  animation-delay: -1s;
 }
 
 .arrows path.a2 {
-  animation-delay:-0.5s;
+  animation-delay: -0.5s;
 }
 
 .arrows path.a3 { 
-  animation-delay:0s;
-  -webkitx-animation-delay:0s; /* Safari 和 Chrome */
+  animation-delay: 0s;
+  -webkitx-animation-delay: 0s; /* Safari 和 Chrome */
 }
