--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -100,6 +100,8 @@
     img {
       max-width: 1000px;
       width: 100%;
+      display: inline;
+      padding: 0;
     }
     .cover_bottom {
       width: 100%;
@@ -217,7 +219,7 @@
       text-align: left;
       &.highlight {
         color: @unbluetext;
-        font-size: 20px;
+        font-size: 22px;
         font-style: italic;
         font-weight: 600;
         max-width: 550px;
@@ -345,11 +347,11 @@
     }
     &.section_banner_container_1 .section_banner {
       background-image: url('./../assets/img/2024-palestine_rapid_assessment_section1-min.jpg');
-      background-position: 0% 90%
+      background-position: 50% 90%
     }
     &.section_banner_container_2 .section_banner {
       background-image: url('./../assets/img/2024-palestine_rapid_assessment_section2-min.jpg');
-      background-position: 50% 40%
+      background-position: 50% 50%
     }
     &.section_banner_container_3 .section_banner {
       background-image: url('./../assets/img/2024-palestine_rapid_assessment_section3-min.jpg');
