--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -329,14 +329,14 @@
       background-position: 50% 50%;
       background-repeat: no-repeat;
       background-size: cover;
-      height: 500px;
+      height: 300px;
       position: relative;
       .number {
         bottom: 0;
         color: rgba(0, 158, 219, 0.8);
-        font-size: 710px;
+        font-size: 430px;
         font-weight: 700;
-        line-height: 525px;
+        line-height: 320px;
         overflow: hidden;
         position: absolute;
         top: 0;
@@ -347,15 +347,15 @@
     }
     &.section_banner_container_1 .section_banner {
       background-image: url('./../assets/img/2024-palestine_rapid_assessment_section1-min.jpg');
-      background-position: 50% 90%
+      background-position: 50% 90%;
     }
     &.section_banner_container_2 .section_banner {
       background-image: url('./../assets/img/2024-palestine_rapid_assessment_section2-min.jpg');
-      background-position: 50% 50%
+      background-position: 50% 50%;
     }
     &.section_banner_container_3 .section_banner {
       background-image: url('./../assets/img/2024-palestine_rapid_assessment_section3-min.jpg');
-      background-position: 50% 40%
+      background-position: 50% 40%;
     }
     .heading_wrapper {
       background-color: @unblue;
@@ -363,8 +363,8 @@
         box-sizing: border-box;
         color: #fff;
         font-family: Roboto Condensed;
-        font-size: 60px;
-        line-height: 70px;
+        font-size: 54px;
+        line-height: 60px;
         margin: auto auto;
         max-width: 1100px;
         padding: 10px 10px 10px 10px;
