Changed highlight styles

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -226,7 +226,9 @@
         font-size: 22px;
         font-style: italic;
         font-weight: 600;
-        max-width: 550px;
+        line-height: 32px;
+        margin: 40px auto 40px auto !important; 
+        max-width: 600px;
       }
       a {
         color: @unbluetext;
